# tinytimer

./: Cargo.toml
.cargo/: config.toml
src/: animations.rs  button.rs  clickable.rs  clock_util.rs  constants.rs  draw_panels.rs  encoder.rs  error.rs  lib.rs  raw_sprites.rs  render_display.rs  scenes.rs  tft.rs  time_util.rs
src/assets/: background-output.tga  background-test.tga  background-white.tga  background.tga  meowl-new.tga  meowl.tga
