[package]
edition = "2021"
name    = "pitft-async"
version = "0.1.0"

[[bin]]
name = "pitft-async"
path = "./src/bin/async_main.rs"

[dependencies]
bytemuck = "1.24.0"
critical-section = "1.2.0"
display-interface-spi = "0.5.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-futures = "0.1.2"
embassy-sync = "0.7.2"
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.3.0"
embedded-time = "0.12.1"
esp-backtrace = { version = "0.15.0", features = [
  "esp32c3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32c3", "unstable"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32c3"] }
esp-println = { version = "0.13.0", features = ["esp32c3", "log"] }
heapless = "0.9.1"
ili9341 = "0.6.0"
log = { version = "0.4.21" }
profont = "0.7.0"
static_cell = { version = "2.1.0", features = ["nightly"] }
tinytga = "0.5.0"

[build-dependencies]
chrono = "0.4.42"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
